@@ -58,8 +58,8 @@ static void
 l_add(Timer * t)
 {
   int h = t->hash;
-  register Timer *t2;
-  register Timer *t2prev;
+  Timer *t2;
+  Timer *t2prev;
 
   t2 = timers[h];
   if (t2 == (Timer *) 0) {
@@ -193,7 +193,7 @@ tmr_mstimeout(struct timeval *nowP)
     int h;
     int gotone;
     long msecs, m;
-    register Timer *t;
+    Timer *t;
 
     gotone = 0;
     msecs = 0;                  /* make lint happy */
